0.7.0.3
New-BcContainer - support blank platform in app artifact
Replace-BcServerContainer supports ArtifactUrl

0.7.0.2
Regression - Flush-ContainerHelperCache fails if c:\bcartifacts.cache doesn't exist
Regression - New-BcImage disn't use the new artifacts cache path

0.7.0.1
New-BcContainer will automatically build anc cache an image if ImageName and ArtifactUrl are specified
Add environment variable ArtifactUrl to image in New-BcImage
new-BcImage deletes the image if it already exists
New function Get-BCContainerArtifactUrl to get the ArtifactUrl used to create a container
Move Artfacts cache to c:\bcartifacts.cache due to filename lengths above 260
Pre-download platform artifact in containerHelper before starting container to avoid dns problems

0.7.0.0
Add new function New-BcImage to create an image based on artifacts
Add artifacts support for New-BcContainer
Add downloads cleanup for Flush-ContainerHelperCache
Issue #1006 - remove files instead of folder (if a lock is on the folder)
Exit waiting for container to be ready if the container exits

0.6.5.11
Set Accept_Outdated to $true as default value to accomodate that images are built on pre-february update WindowsServerCore imageName
Check validationResults in Get-Tests loop
Windows Defender acuses New-NavContainer of containing a virus

0.6.5.10
Issue #985 Tests report failure wrongly

0.6.5.9
Issue #981 Run-Tests fail on 16.x containers
Issue #974 Compile of app fails when using customized application.app

0.6.5.8
Add Parameter -includeTestFrameworkOnly to install the Test Framework without the Test Libraries
Issue #978 - do not use local docker.ico when creating shortcuts

0.6.5.7
Issue #921 - Using -useBestContainerOS with foreign database specification fails
Issue #959 - Specifying applicationinsights in app.json without application property throws exception
PR #949 - support swarm services (Thanks Tobias Fenster)